# test-cobre

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  cmakework.vim  testwork.vim  update.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/main/: .main.cpp.swp  CMakeLists.txt  main.cpp
